VOTE-2 - add voting restriction for admin